Added lazy loading for frontpage image

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -266,7 +266,7 @@ Parallax and Background Image classes
 	background-position: top center;
     background-size: auto 100%;
     background-repeat: repeat-x;
-	background-image: url('../img/pic-ocean.jpg');
+	background-image: url('../img/pic-ocean.jpg'); 
     width: 100%;
     position: absolute;
     display: none;
@@ -281,7 +281,7 @@ Parallax and Background Image classes
     position: fixed;
 }
 #paralax-1{
-	background-image: url('../img/pic-ocean.jpg');
+	background-image: url('../img/pic-ocean-low.jpg');
 }
 #paralax-3{
 	// border-top: 30px solid @light;
