added image for lazy loading

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -282,6 +282,9 @@ Parallax and Background Image classes
 }
 #paralax-1{
 	background-image: url('../img/pic-ocean-low.jpg');
+	&.ocean{
+		background-image: url('../img/pic-ocean.jpg');
+	}
 }
 #paralax-3{
 	// border-top: 30px solid @light;
