--- a/src/less/app.less
+++ b/src/less/app.less
@@ -73,6 +73,7 @@ body{
 	font-family: @OpenSans;
 	font-weight: 300;
 	width: 100vw;
+	overflow-x:hidden;
 }
 // h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5{
 // 	margin:0;
