--- a/src/less/app.less
+++ b/src/less/app.less
@@ -265,7 +265,7 @@ Parallax and Background Image classes
 }
 .nonparallax{
 	background-position: top center;
-    background-size: auto 100%;
+    background-size: 100% auto;
     background-repeat: repeat-x;
 	background-image: url('../img/pic-ocean.jpg'); 
     width: 100%;
